--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -14,8 +14,8 @@
           - Free
           - Pair: 
               - Scaled: 
-                  inner: {Uniform: { low: 1, high: 666 }}
-                  scale: 1440
+                  inner: {Uniform: { low: 1, high: 666 }} # 666 hours
+                  scale: 1440 # one hour in minutes
               # Up to one month, granularity of hours
               - Scaled:
                   inner: {Uniform: { low: 1, high: 744 }}
@@ -30,7 +30,6 @@
                 scale: 1
 
   algorithms:
-    # - LinearScan
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
