--- a/experiments/scalability.yml
+++ b/experiments/scalability.yml
@@ -87,7 +87,7 @@
         num_levels: [4, 8]
     - RDIndex:
         dimension_order: [TimeDuration, DurationTime]
-        page_size: [50, 100, 200, 300, 400]
+        page_size: [50, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 2000, 3000]
 
 ########################################################################
 #
@@ -147,7 +147,7 @@
         num_levels: [4, 8]
     - RDIndex:
         dimension_order: [TimeDuration, DurationTime]
-        page_size: [50, 100, 200, 300, 400]
+        page_size: [50, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 2000, 3000]
 
 ######################################################################
 #
@@ -205,7 +205,7 @@
         num_levels: [4, 8]
     - RDIndex:
         dimension_order: [TimeDuration, DurationTime]
-        page_size: [50, 100, 200, 300, 400]
+        page_size: [50, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 2000, 3000]
 
 ######################################################################
 #
@@ -260,5 +260,5 @@
         num_levels: [4, 8]
     - RDIndex:
         dimension_order: [TimeDuration, DurationTime]
-        page_size: [50, 100, 200, 300, 400]
+        page_size: [50, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 2000, 3000]
 
