--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ rayon = "1.4"
 csv = "1.1"
 flate2 = "1.0.19"
 reqwest = {version = "0.10", features = ["blocking"]}
+rstar = "0.8"
 
 [dev-dependencies]
 paste = "1.0"
