--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -30,6 +30,7 @@
                 scale: 1
 
   algorithms:
+    - RTree
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
@@ -70,6 +71,7 @@
 
   algorithms:
     # - LinearScan
+    - RTree
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
@@ -107,6 +109,7 @@
 
   algorithms:
     # - LinearScan
+    - RTree
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
