--- a/experiments/focus.yml
+++ b/experiments/focus.yml
@@ -34,6 +34,7 @@
               - Zipf: { n: 10000000, beta: 1 }
 
   algorithms:
+    - RTree
     - BTree
     - GridFile:
         side_cells: [1000]
