--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -4,33 +4,33 @@
     Batch
 
   datasets:
-    - Random:
-        seed: [123]
-        n: 
-          - 1000000
-        start_times:
-          - Uniform: { low: 1, high: 10000000 }
-          # - Clustered: { n: 10, high: 10000000, std_dev: 100000 }
-        durations:
-          - Zipf: { n: 10000000, beta: 1 }
+    - MimicIII
 
   queries:
     - Random:
         seed: [23512]
-        n: [5000]
+        n: [10000]
         range:
-          - Pair: [
-              Uniform: { low: 1, high: 10000000 },
-              Zipf: { n: 10000000, beta: 1 }
-          ]
+          #- Free
+          - Pair: 
+              - Scaled: 
+                  inner: {Uniform: { low: 1, high:  40251}}
+                  scale: 1
+              - Scaled:
+                  inner: {Uniform: { low: 1, high: 40251}}
+                  scale: 1
+          
         duration:
-          - Single:
-              Uniform: { low: 1, high: 10000 }
+          #- Free
+          - Single: 
+              Scaled:
+                inner: {Uniform: { low: 1, high: 100}}
+                scale: 1
 
   algorithms:
     - RTree
-    # - RDIndex:
-    #     dimension_order: [DurationTime, TimeDuration]
-    #     page_size: [100]
-    - PeriodIndexPlusPlus:
-        page_size: [100]
+    - BTree
+    - IntervalTree
+    - RDIndex:
+        dimension_order: [TimeDuration, DurationTime]
+        page_size: [10, 50, 100, 150]
