--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -122,3 +122,43 @@
         page_size: [10, 50, 100, 500]
 
 
+- mode: 
+    Batch
+
+  datasets:
+    - MimicIII
+
+  queries:
+    - Random:
+        seed: [23512]
+        n: [10000]
+        range:
+          - Free
+          - Pair: 
+              - Scaled: 
+                  inner: {Uniform: { low: 1, high:  40251}}
+                  scale: 1
+              - Scaled:
+                  inner: {Uniform: { low: 1, high: 40251}}
+                  scale: 1
+          
+        duration:
+          - Free
+          - Single: 
+              Scaled:
+                inner: {Uniform: { low: 1, high: 100}}
+                scale: 1
+
+  algorithms:
+    - RTree
+    - BTree
+    - GridFile:
+        side_cells: [10, 100, 1000]
+    - IntervalTree
+    - PeriodIndexStar:
+        num_buckets: [32, 64, 128, 256, 512]
+        num_levels: [4, 8, 16, 32]
+    - RDIndex:
+        dimension_order: [TimeDuration, DurationTime]
+        page_size: [50, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 2000, 3000]
+
