--- a/experiments/insertion.yml
+++ b/experiments/insertion.yml
@@ -33,4 +33,4 @@
     - IntervalTree
     - RDIndex:
         dimension_order: [TimeDuration, DurationTime]
-        page_size: [100, 200]
+        page_size: [50, 100, 200, 400]
