--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -1,31 +1,79 @@
 ---
 
-- mode: #Batch
-    Insertion: 
-      batch: 10000
+- mode: Batch
   datasets:
-    - MimicIII
-    - Sorted:
-        base: MimicIII
+    - Random:
+        seed: [123]
+        n: 
+          - 10000000
+        start_times:
+          - Uniform: { low: 1, high: 10000000 }
+        durations:
+          - Zipf: { n: 10000000, beta: 1 }
 
   queries:
-    # dummy queryset, in insertion experiments it is not actually used
-    - Random:
+    - Mixed:
+        frac_duration: 0
+        frac_range: 1
+        frac_range_duration: 0
         seed: [23512]
         n: [10000]
         range:
-          - Free
-          
+          - Pair: [
+              Uniform: { low: 1, high: 10000000 },
+              Zipf: { n: 10000000, beta: 1 }
+          ]
         duration:
-          - Single: 
-              Scaled:
-                inner: {Uniform: { low: 1, high: 200}}
-                scale: 1
+          - Single:
+              Uniform: { low: 1, high: 10000 }
+
+    - Mixed:
+        frac_duration: 1
+        frac_range: 0
+        frac_range_duration: 0
+        seed: [23512]
+        n: [10000]
+        range:
+          - Pair: [
+              Uniform: { low: 1, high: 10000000 },
+              Zipf: { n: 10000000, beta: 1 }
+          ]
+        duration:
+          - Single:
+              Uniform: { low: 1, high: 10000 }
+
+    - Mixed:
+        frac_duration: 0
+        frac_range: 0
+        frac_range_duration: 1
+        seed: [23512]
+        n: [10000]
+        range:
+          - Pair: [
+              Uniform: { low: 1, high: 10000000 },
+              Zipf: { n: 10000000, beta: 1 }
+          ]
+        duration:
+          - Single:
+              Uniform: { low: 1, high: 10000 }
+
+    - Mixed:
+        frac_duration: 0.33
+        frac_range: 0.33
+        frac_range_duration: 0.33
+        seed: [23512]
+        n: [10000]
+        range:
+          - Pair: [
+              Uniform: { low: 1, high: 10000000 },
+              Zipf: { n: 10000000, beta: 1 }
+          ]
+        duration:
+          - Single:
+              Uniform: { low: 1, high: 10000 }
 
   algorithms:
-    # - IntervalTree
-    - BTree
-    # - RTree
+    # - BTree
     - RDIndex:
-        dimension_order: [TimeDuration, DurationTime]
+        dimension_order: [DurationTime]
         page_size: [200]
