--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ csv = "1.1"
 flate2 = "1.0.19"
 reqwest = {version = "0.11", features = ["blocking"]}
 rstar = "0.8"
+serde_json = "1.0.91"
 
 [dev-dependencies]
 paste = "1.0"
