--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -11,7 +11,7 @@
           - 10000000
         start_times:
           - Uniform: { low: 1, high: 10000000 }
-          - Clustered: { n: 10, high: 10000000, std_dev: 100000 }
+          # - Clustered: { n: 10, high: 10000000, std_dev: 100000 }
         durations:
           - Zipf: { n: 10000000, beta: 1 }
 
@@ -24,10 +24,10 @@
               Uniform: { low: 1, high: 10000000 },
               Zipf: { n: 10000000, beta: 1 }
           ]
-          - Pair: [
-              Clustered: { n: 10, high: 10000000, std_dev: 100000 },
-              Zipf: { n: 10000000, beta: 1 }
-          ]
+          # - Pair: [
+          #     Clustered: { n: 10, high: 10000000, std_dev: 100000 },
+          #     Zipf: { n: 10000000, beta: 1 }
+          # ]
           - Free
         duration:
           - Single:
