--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -8,72 +8,23 @@
           - 10000000
         start_times:
           - Uniform: { low: 1, high: 10000000 }
+          # - Clustered: { n: 10, high: 10000000, std_dev: 100000 }
         durations:
           - Zipf: { n: 10000000, beta: 1 }
 
   queries:
-    - Mixed:
-        frac_duration: 0
-        frac_range: 1
-        frac_range_duration: 0
+    - Random:
         seed: [23512]
-        n: [10000]
+        n: [5000]
         range:
           - Pair: [
               Uniform: { low: 1, high: 10000000 },
               Zipf: { n: 10000000, beta: 1 }
           ]
         duration:
-          - Single:
-              Uniform: { low: 1, high: 10000 }
-
-    - Mixed:
-        frac_duration: 1
-        frac_range: 0
-        frac_range_duration: 0
-        seed: [23512]
-        n: [10000]
-        range:
-          - Pair: [
-              Uniform: { low: 1, high: 10000000 },
-              Zipf: { n: 10000000, beta: 1 }
-          ]
-        duration:
-          - Single:
-              Uniform: { low: 1, high: 10000 }
-
-    - Mixed:
-        frac_duration: 0
-        frac_range: 0
-        frac_range_duration: 1
-        seed: [23512]
-        n: [10000]
-        range:
-          - Pair: [
-              Uniform: { low: 1, high: 10000000 },
-              Zipf: { n: 10000000, beta: 1 }
-          ]
-        duration:
-          - Single:
-              Uniform: { low: 1, high: 10000 }
-
-    - Mixed:
-        frac_duration: 0.33
-        frac_range: 0.33
-        frac_range_duration: 0.33
-        seed: [23512]
-        n: [10000]
-        range:
-          - Pair: [
-              Uniform: { low: 1, high: 10000000 },
-              Zipf: { n: 10000000, beta: 1 }
-          ]
-        duration:
-          - Single:
-              Uniform: { low: 1, high: 10000 }
+          - Free
 
   algorithms:
-    # - BTree
     - RDIndex:
         dimension_order: [DurationTime]
         page_size: [200]
