export range-duration queries

--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -22,7 +22,8 @@
               Zipf: { n: 10000000, beta: 1 }
           ]
         duration:
-          - Free
+          - Single:
+              Uniform: { low: 1, high: 10000 }
 
   algorithms:
     - RDIndex:
