--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "temporal-index"
 version = "0.1.0"
 authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
 edition = "2018"
-build = "build.rs"  
+build = "build.rs"
 
 [dependencies]
 rand = "0.7"
@@ -25,9 +25,10 @@ sysinfo = "0.15"
 rayon = "1.4"
 csv = "1.1"
 flate2 = "1.0.19"
-reqwest = {version = "0.11", features = ["blocking"]}
+reqwest = { version = "0.11", features = ["blocking"] }
 rstar = "0.8"
 serde_json = "1.0.91"
+crossbeam-channel = "0.5.13"
 
 [dev-dependencies]
 paste = "1.0"
