--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,9 @@ flate2 = "1.0.19"
 reqwest = { version = "0.11", features = ["blocking"] }
 rstar = "0.8"
 serde_json = "1.0.91"
-voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }
+# voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }
+# crossbeam-channel = "0.5.13"
+scoped-pool = "1.0.0"
 
 [dev-dependencies]
 paste = "1.0"
